Add fetcher support for aggregate_double_metric
Change how we serialize metrics to doc